<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.interactivebooksforkids.RewardFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rewardImage"
        android:layout_gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/back_to_q"
        android:layout_gravity="left|bottom"
        android:text="@string/back_to_q"
        android:visibility="invisible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_book_list"
        android:id="@+id/back_to_main_from_reward"
        android:layout_gravity="right|bottom"
        android:visibility="invisible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:id="@+id/camera_button"
        android:layout_gravity="left|top"
        android:visibility="invisible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pause_play_button"
        android:layout_gravity="center_horizontal|bottom"
        android:text="@string/pause_play"
        android:visibility="invisible" />

</FrameLayout>
