<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.interactivebooksforkids.BookPageFragment"
    android:orientation="vertical"
    android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="horizontal|vertical"
        android:scrollbarStyle="outsideInset"
        android:fillViewport="true"
        android:layout_weight="0.75">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="1">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:id="@+id/page_img"
                    android:adjustViewBounds="false"
                    android:layout_gravity="center_horizontal"
                    android:layout_weight="0.6"
                    android:scaleType="fitCenter"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/book_page_content"
                    android:textColor="#ffff33"
                    android:layout_gravity="center_horizontal" />

            </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.11"
        android:layout_gravity="center_horizontal">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/previous"
            android:id="@+id/pre_page_button" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_page_list"
            android:id="@+id/back_to_page_list_button"
            android:paddingStart="20dp"
            android:paddingEnd="20dp" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
            android:id="@+id/next_page_button" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:id="@+id/layout_end"
        android:layout_weight="0.14">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/read_anim_iv"
            android:layout_gravity="center_vertical" />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end"
            android:id="@+id/button_end_read"
            android:visibility="invisible"
            android:layout_gravity="top" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/read"
            android:id="@+id/read_text_button" />
    </LinearLayout>

</LinearLayout>
